Gateways/virtualService.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: book-info-vs
  namespace: istio-system
spec:
  hosts:
  - productpage
  - book.info.com # Added
  gateways: # Added
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: productpage.default.svc.cluster.local
        port:
          number: 9080
